@@ -133,33 +133,6 @@ class tx_ttnews_div {
 		return $catlist;
 	}
 
-	function cache_set($hash, $content,$identifier) {
-		$fields_values = array('hash' => $hash, 'content' => $content, 'tstamp' => $GLOBALS['EXEC_TIME'],'identifier'=>$identifier);
-		$GLOBALS['TYPO3_DB']->exec_DELETEquery('tt_news_cache', 'hash="' . $hash . '"');
-		$GLOBALS['TYPO3_DB']->exec_INSERTquery('tt_news_cache', $fields_values);
-	}
-
-
-	function cache_get($hash,$period) {
-		$select_fields = 'content';
-		$from_table = 'tt_news_cache';
-		$where_clause = 'hash="' . $hash . '"';
-		$ACCESS_TIME = ($GLOBALS['ACCESS_TIME']?$GLOBALS['ACCESS_TIME']:$GLOBALS['EXEC_TIME']);
-		if ($period>0) {
-			$where_clause .= ' AND tstamp+'.(int)$period.'>'.$ACCESS_TIME;
-		}
-
-		$cRec = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows($select_fields, $from_table, $where_clause);
-
-		if (is_array($cRec[0]) && $cRec[0]['content']!='') {
-			return $cRec[0]['content'];
-		} else {
-			return false;
-		}
-
-	}
-
-
 
 
 	function getNewsCountForSubcategory(&$result, $cat, $news_clause, $catclause) {
